[package]
authors = ["Yoshizawa Shogo <shogo.yoshizawa.2000@gmail.com>"]
description = "A simple DB wrapping a HashMap"

name = "ys_simple_db"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["db", "simple"]

repository = "https://github.com/YoshizawaShogo/simple_csv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
